# rabbit-task-dispatcher

./: README.md
.github/workflows/: go.yml  rust.yml
cli/: .env  Cargo.toml
cli/src/: log_handler.rs  main.rs  rabbit_service.rs  tui_handler.rs  utils.rs
client/: .env  Cargo.toml
client/src/: context_handler.rs  log_handler.rs  main.rs  rabbit_service.rs  tasks_handler.rs  translations_handler.rs  tui_handler.rs  utils.rs
go-worker/: go.mod  go.sum  main.go
