[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
crossterm = "0.27.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
lapin = "2.3.1"
log = "0.4.21"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
tokio = { version = "1.36.0", features = ["full"] }
